--- a/ui/html/footer.partial.tmpl
+++ b/ui/html/footer.partial.tmpl
@@ -1,7 +1,9 @@
 {{define "footer"}}
-<nav class="navbar fixed-bottom footer">
-    <div class="inside-footer-item">Forum made by: Alex, Keiti, Leonard, Martin, Robert Kris</div>
-</nav>
+<div class="footercontent">
+    <nav class="navbar footer">
+        <div class="inside-footer-item">Forum made by: Alex, Keiti, Leonard, Martin, Robert Kris</div>
+    </nav>
+</div>
 <!-- <div class="footer">
     <div class="inside-footer">
         <<div class="inside-footer-item">Forum made by: Alex, Keiti, Leonard, Martin, Robert Kris</div>>
