--- a/ui/html/submitpost.page.tmpl
+++ b/ui/html/submitpost.page.tmpl
@@ -11,54 +11,56 @@
 {{define "body"}}
 <div class="createpostcontent">
 	<div class="createpostbox">
-		<div class="createpostheader">
-			<h1>Create post</h1>
+		<div class="createpostboxinside">
+			<div class="createpostheader">
+				<h1>Create a post</h1>
+			</div>
+			<form method="POST" id="threadform" action="/submit" enctype="multipart/form-data">
+				<!-- Thread title -->
+				<div class="">
+					<label class="form-label">Title</label>
+					<input class="form-control" type="text" required name="title" placeholder="Post title" value="" maxlength="30"/>
+				</div>
+			
+				<!-- Content textarea -->
+				<div class="">
+					<label class="form-label">Description</label>
+					<textarea class="form-control" id="postcontent" name="content" onkeyup="charactercount()" maxlength="500" placeholder="Maximum 500 characters" required></textarea>
+					<div class="d-flex justify-content-end">
+						<span id="words_count" class="badge badger">
+							<span id="textcount">0</span>/500
+						</span>
+					</div>
+				</div>
+				<div id="textarea_count" class="badge pull-right"></div>
+			
+				<!-- Image upload -->
+				<div class="">
+					<label class="form-label">Upload Image</label>
+					<div class="input-group">
+						<input type="file" class="form-control" id="inputGroupFile01" name="myFile"
+							>
+					</div>
+				</div>
+				<!-- Category tagging -->
+				<div class="">
+					<label class="form-label">Tags</label>
+					<select class="form-select form-control" id="tags-input" name="category" required multiple data-allow-clear="true" data-show-all-suggestions="true" data-max="5">
+						{{range .Categories}}
+						<option class="dropdownoption"value="{{.Title}}">{{.Title}}</option>
+						{{end}}
+					</select>
+				</div>
+			
+				<!-- Sumbit button -->
+				<div class="submitpostbuttons">
+					<a href="/" class="btn cancelbtn" >Cancel</a>
+					<button type="submit" class="btn submitbtn" name="submitPost">Submit</button>
+				</div>
+			</form>
 		</div>
-		<form method="POST" id="threadform" action="/submit" enctype="multipart/form-data">
-			<!-- Thread title -->
-			<div class="">
-				<label class="form-label">Title</label>
-				<input class="form-control" type="text" required name="title" placeholder="Post title" value="" maxlength="30"/>
-			</div>
-		
-			<!-- Content textarea -->
-			<div class="">
-				<label class="form-label">Content</label>
-				<textarea class="form-control" id="postcontent" name="content" onkeyup="charactercount()" maxlength="500" placeholder="Maximum 500 characters" required></textarea>
-				<div class="d-flex justify-content-end">
-					<span id="words_count" class="badge bg-secondary rounded-pill">
-						<span id="textcount">0</span>/500
-					</span>
-				</div>
-			</div>
-			<div id="textarea_count" class="badge pull-right"></div>
-		
-			<!-- Image upload -->
-			<div class="">
-				<label class="form-label">Upload Image</label>
-				<div class="input-group">
-					<input type="file" class="form-control" id="inputGroupFile01" name="myFile"
-						>
-				</div>
-			</div>
-			<!-- Category tagging -->
-			<div class="">
-				<label class="form-label">Tags</label>
-				<select class="form-select form-control" id="tags-input" name="category" required multiple data-allow-clear="true" data-show-all-suggestions="true" data-max="5">
-					{{range .Categories}}
-					<option value="{{.Title}}">{{.Title}}</option>
-					{{end}}
-				</select>
-			</div>
-		
-			<!-- Sumbit button -->
-			<div class="">
-				<a href="/" class="btn btn-primary btn-lg" >Cancel</a>
-				<button type="submit" class="btn btn-primary btn-lg" name="submitPost">Submit</button>
-			</div>
-		</form>
 	</div>
-</div>
+</div>	
 {{end}}
 
 {{define "js"}}
