--- a/ui/html/createcat.page.tmpl
+++ b/ui/html/createcat.page.tmpl
@@ -1,84 +1,33 @@
 {{template "base" .}}
 {{define "body"}}
-<style>
-    
-   
-    .left,.right {
-       
-       position: fixed;
-       overflow-x: hidden;
-       padding-top: 15px;
-    }
-    .left {
-       height: 100%;
-       width: 70%;
-       left: 4em;
-       top: 4em;
-          }
-    .right {
-     
-       right: 5em;
-       top: 5em;
-       height: 57%;
-       width: 40%;
-     
-      
-     
-    }
-    
- </style>
-<div class="left">
-<h2>Create a category</h2>
-<form method="post">
-        <div>
-            <label>Name *</label>
-            <input type="text" required name="catname" style="border: 3px solid #45ffdb; border-radius: 4px; background-color: #f8f8f8d8;  font-size: 20px" placeholder="Category name" value="" maxlength="50" />
+<div class="createpostcontent">
+	<div class="createcatebox">
+		<div class="createpostboxinside">
+			<div class="createpostheader">
+				<h1>Create a category</h1>
+			</div>
+                <form method="post">
+                    <div>
+                        <label class="form-label">Name</label>
+                        <input class="form-control"type="text" required name="catname" placeholder="Category name" value="" maxlength="50" />
+                    </div>
+                    <div>
+                        <label class="form-label">Description</label>
+                        <textarea class="form-control" name="description" onkeyup="charactercount()" maxlength="500" placeholder="Maximum 500 characters" required></textarea>
+                        <div class="d-flex justify-content-end">
+                            <span id="words_count" class="badge badger">
+                                <span id="textcount">0</span>/500
+                            </span>
+                        </div>
+                    </div>
+                    <div id="textarea_count" class="badge pull-right"></div>
+                    
+                    <div class="submitcatebuttons">
+                        <a href="/" class="btn cancelbtn">Cancel</a>
+                        <button type="submit" class="btn submitbtn" name="createCategory">Submit</button>
+                    </div>
+                </form>
         </div>
-        <div>
-            <label>Category description (500 chars)</label>
-            <textarea name="description"  style="min-height: 250px; min-width: 500px; border: 2px solid #45ffdb; border-radius: 4px; background-color: #f8f8f8bd;  font-size: 16px" maxlength="500"></textarea>
-        </div>
-        <div>
-            <button type="submit"  class="btn btn-primary btn-lg" style="background-color:#45ffdb; color:#1A1A1B;margin-top: 0.8em;" name="createCategory">Create</button>
-        </div>
-    </form>
-</form>
+	</div>
 </div>
-
-<div class="right">
-    <h1>POWERED BY :</h1>
-    <div id="mainCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-            <button type="button" data-bs-target="#mainCarousel" data-bs-slide-to="0" class="active" aria-current="true"
-                aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#mainCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#mainCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        </div>
-       
-    
-        <div class="carousel-inner">
-            
-            <div class="carousel-item active">
-                <img src="https://www.yfu.ee/wp-content/uploads/2016/05/lhv.jpg"  class="d-block w-100"   alt="lhv">
-                <div class="carousel-caption d-none d-md-block">
-                    <p></p>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="https://lienzo.s3.amazonaws.com/images/97e0047609e3fb05a0160469daee5241-wise-logo-grey-bg.png" class="d-block w-100"  alt="wise">
-                <div class="carousel-caption d-none d-md-block">   
-                    <p></p>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="https://blog.bolt.eu/wp-content/uploads/2019/03/taxify-is-now-bolt.png" class="d-block w-100"   alt="Bolt">
-                <div class="carousel-caption d-none d-md-block">
-                 
-                </div>
-            </div>
-        </div>
-    </div>
-    
-      
-    </div>
 {{end}}
