--- a/ui/html/profile.page.tmpl
+++ b/ui/html/profile.page.tmpl
@@ -17,7 +17,7 @@
 				</div>
 				<div class="profileemail">
 					<h3>Email</h3>
-					<a>Email: {{.AuthenticatedUser.Email}}</a>
+					<a>{{.AuthenticatedUser.Email}}</a>
 				</div>
 				<div class="profileaccount">
 					<h3>Account type</h3>
