--- a/ui/assets/css/mystyle.css
+++ b/ui/assets/css/mystyle.css
@@ -292,11 +292,102 @@ border:1px solid #45ffdb;
 
 /* MAINPAGE */
 
+.mainpagecontent {
+    padding-top: 40px;
+}
+
+.mainpagebox {
+    min-width: 750px;
+    min-height: auto;
+    margin: auto;
+    background-color: #1A1A1B;
+    border:1px solid #676869;
+    border-radius: 10px;
+}
+
+.mainpageboxinside {
+    padding: 45px 45px 20px 45px;
+}
+
 .categorycontent {
     background: #1A1A1B;
     height: 1px;
 }
 
+.mainpageboxheader h1 {
+    font-size: 45px;
+    color: whitesmoke;
+    padding-bottom: 10px;
+}
+
+.kodify {
+    color: #45ffdb;
+    text-decoration: none;
+}
+
+.kodify:hover {
+    color: #45ffdb;
+}
+
+.adderbuttons {
+    padding-bottom: 10px;
+}
+
+.adderbuttons a {
+    color: whitesmoke;
+    border:1px solid whitesmoke;
+    background-color: #1A1A1B;
+    min-width: 110px;
+    text-decoration: none;
+}
+    
+.adderbuttons a:hover {
+    background-color: #45ffdb;
+    color: #1A1A1B;
+    border:1px solid #45ffdb;
+}
+    
+.categories {
+    border:1px solid whitesmoke;
+    border-radius: 10px;
+}
+
+.insidecategories {
+    padding: 20px;
+}
+
+.insidecatepadding {
+    padding: 3px;
+}
+
+.catecard {
+    padding: 2px;
+    min-width: 200px;
+    max-height: 500px;
+    height: 100%;
+    border:1px solid #676869;
+    border-radius: 10px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    word-wrap: break-word;
+    background-color: #1A1A1B;
+    transition: transform .2s;
+}
+
+.catecard:hover {
+    transform: scale(1.02);
+}
+
+.card-body a {
+    text-decoration: none;
+}
+
+.catecardtitle {
+    color: #45ffdb;
+    font-size: 30px;
+    text-decoration: none;
+}
 
 .card-text {
 	overflow: hidden;
@@ -305,6 +396,7 @@ border:1px solid #45ffdb;
 	-webkit-line-clamp: 5;
 			line-clamp: 2;
 	-webkit-box-orient: vertical;
+    color: whitesmoke;
 }
 
 .category-card {
