--- a/ui/html/editpost.page.tmpl
+++ b/ui/html/editpost.page.tmpl
@@ -28,11 +28,51 @@
 		</div>
 	</div>
 
+	{{with .Post.ImageSrc}}
+	<img class="postimg" src="/static/{{.}}" alt="">
+	{{end}}
+
+	<div class="mb-3">
+		<button type="button" class="btn btn-warning">Delete Image</button>
+	</div>
+
+
+
+	<!-- Button trigger modal -->
+	<button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#imageModal">
+		Change Image
+	</button>
+	
+	
 	<!-- Sumbit button -->
 	<div class="mb-3">
 		<button type="submit" class="btn btn-primary" name="submitPost">Submit</button>
 	</div>
 </form>
+
+
+<!-- Change Image Modal -->
+<div class="modal fade" id="imageModal" tabindex="-1" aria-labelledby="imageModalLabel" aria-hidden="true">
+	<div class="modal-dialog">
+	<div class="modal-content">
+		<div class="modal-header">
+			<h5 class="modal-title" id="imageModalLabel">Change Image</h5>
+			<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+		</div>
+		<div class="modal-body">
+			<form action="/editimage/{{.Post.ID}}" id="imageform">
+				<div class="input-group">
+					<input type="file" class="form-control" id="inputGroupFile01" name="image">
+				</div>
+			</form>
+		</div>
+		<div class="modal-footer">
+			<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+			<button type="submit" form="imageform" class="btn btn-primary">Save changes</button>
+		</div>
+	</div>
+	</div>
+</div>
 
 {{end}}
 
