--- a/ui/html/submitpost.page.tmpl
+++ b/ui/html/submitpost.page.tmpl
@@ -37,8 +37,7 @@
 			<div class="">
 				<label class="form-label">Upload Image</label>
 				<div class="input-group">
-					<input type="file" class="form-control" id="inputGroupFile01" name="myFile"
-						>
+					<input type="file" class="form-control" id="inputGroupFile01" name="myFile">
 				</div>
 			</div>
 			<!-- Category tagging -->
