Fixed header signup link, after login redirects to content page

--- a/ui/html/header.partial.tmpl
+++ b/ui/html/header.partial.tmpl
@@ -135,7 +135,7 @@
 					<a class="btn header btn-outline-secondary first" href="/login">Log In	</a>
 				</div>
 				<div class="btn-header1-div">
-					<a class="btn header btn-outline-secondary second" href="/register">Sign Up</a>
+					<a class="btn header btn-outline-secondary second" href="/signup">Sign Up</a>
 				</div>
 			</form>
 	</div>
