--- a/ui/assets/css/mystyle.css
+++ b/ui/assets/css/mystyle.css
@@ -615,7 +615,7 @@ border:1px solid #45ffdb;
 
 .createpostheader h1 {
     font-size: 45px;
-    color: whitesmoke;
+    color: #45ffdb;
     padding-bottom: 10px;
 }
 
