--- a/ui/html/editpost.page.tmpl
+++ b/ui/html/editpost.page.tmpl
@@ -1,79 +1,51 @@
 {{template "base" .}}
 
 {{define "body"}}
-<h2>Create a post</h2>
-<form method="POST" id="threadform" action="/edit/{{.Post.ID}}">
-	<!-- Thread title -->
-	<div class="mb-3">
-		<label class="form-label">Title</label>
-		<input class="form-control" type="text" required name="title" placeholder="Post title" value="{{.Post.Title}}"
-			maxlength="30" />
-	</div>
-
-	<!-- Content textarea -->
-	<div class="mb-3">
-		<label class="form-label">Content</label>
-		<textarea class="form-control" id="postcontent" name="content" onkeyup="charactercount()" maxlength="500"
-			placeholder="Maximum 500 characters" required>{{.Post.Content}}</textarea>
-		<div class="d-flex justify-content-end">
-			<span id="words_count" class="badge bg-secondary rounded-pill">
-				<span id="textcount">0</span>/500
-			</span>
-		</div>
-	</div>
-	<div id="textarea_count" class="badge pull-right"></div>
-	<div class="mb-3">
-		<div class="input-group" id="myDIV">
-			<input type="file" class="form-control" id="inputGroupFile01" name="myFile">
-		</div>
-	</div>
-
-	{{with .Post.ImageSrc}}
-	<img class="postimg" src="/static/{{.}}" alt="">
-	{{end}}
-
-	<div class="mb-3">
-		<button type="button" class="btn btn-warning">Delete Image</button>
-	</div>
-
-
-
-	<!-- Button trigger modal -->
-	<button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#imageModal">
-		Change Image
-	</button>
-	
-	
-	<!-- Sumbit button -->
-	<div class="mb-3">
-		<button type="submit" class="btn btn-primary" name="submitPost">Submit</button>
-	</div>
-</form>
-
-
-<!-- Change Image Modal -->
-<div class="modal fade" id="imageModal" tabindex="-1" aria-labelledby="imageModalLabel" aria-hidden="true">
-	<div class="modal-dialog">
-	<div class="modal-content">
-		<div class="modal-header">
-			<h5 class="modal-title" id="imageModalLabel">Change Image</h5>
-			<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-		</div>
-		<div class="modal-body">
-			<form action="/editimage/{{.Post.ID}}" id="imageform">
-				<div class="input-group">
-					<input type="file" class="form-control" id="inputGroupFile01" name="image">
+<div class="createpostcontent">
+	<div class="createpostbox">
+		<div class="createpostboxinside">
+			<div class="createpostheader">
+				<h1>Edit a post</h1>
+			</div>
+			<form method="POST" id="threadform" action="/edit/{{.Post.ID}}">
+				<!-- Thread title -->
+				<div class="mb-3">
+					<label class="form-label">Title</label>
+					<input class="form-control" type="text" required name="title" placeholder="Post title" value="{{.Post.Title}}"
+						maxlength="30" />
+				</div>
+			
+				<!-- Content textarea -->
+				<div class="mb-3">
+					<label class="form-label">Content</label>
+					<textarea class="form-control" id="postcontent" name="content" onkeyup="charactercount()" maxlength="500"
+						placeholder="Maximum 500 characters" required>{{.Post.Content}}</textarea>
+					<div class="d-flex justify-content-end">
+						<span id="words_count" class="badge badger">
+							<span id="textcount">0</span>/500
+						</span>
+					</div>
+				</div>
+				<div id="textarea_count" class="badge pull-right"></div>
+				<div class="mb-3">
+					<div class="input-group" id="myDIV">
+						<input type="file" class="form-control" id="inputGroupFile01" name="myFile">
+					</div>
+				</div>
+			
+				{{with .Post.ImageSrc}}
+				<img class="postimg" src="/static/{{.}}" alt="">
+				{{end}}
+			
+				<!-- Sumbit button -->
+				<div class="submitpostbuttons">
+					<a href="/" class="btn cancelbtn">Cancel</a>
+					<button type="submit" class="btn submitbtn" name="submitPost">Submit</button>
 				</div>
 			</form>
 		</div>
-		<div class="modal-footer">
-			<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-			<button type="submit" form="imageform" class="btn btn-primary">Save changes</button>
-		</div>
-	</div>
 	</div>
 </div>
-
 {{end}}
 
 {{define "js"}}
