Prepared DB migration statement

--- a/ui/html/login.page.tmpl
+++ b/ui/html/login.page.tmpl
@@ -27,7 +27,7 @@
 				</div>
 				<input class="btn loginbtn" type="submit" value="Log In">
 				<div class="registerlink">
-					<a href="/register" >New user? Register</a>
+					<a href="/signup" >New user? Register</a>
 				</div>
 			</form>
 		</div>
