--- a/ui/html/showcat.page.tmpl
+++ b/ui/html/showcat.page.tmpl
@@ -89,9 +89,10 @@
 									</div>
 
 									<div class="postdetails">
-										<div class="post-username">Posted by {{.User}}</div>
+										<div class="post-username">Posted by {{.User}} {{timeAgo .Created}}</div>
 										<div class="post-title"><a class="post-title stretched-link" href="/post/{{.ID}}">{{.Title}}</a></div>
-										<div class="post-description">{{timeAgo .Created}}</div>
+										<div class="post-description">Random description hardcoded for leo yeee boi.</div>
+										
 										<!-- <div class="post-comments">8 comments</div> -->
 									</div>
 
