--- a/ui/html/showpost.page.tmpl
+++ b/ui/html/showpost.page.tmpl
@@ -1,166 +1,205 @@
 {{template "base".}}
 {{define "body"}}
 
-{{with .Post}}
-<div class="div">
-	<div class="post-card" id="post{{.ID}}">
-		{{if $.AuthenticatedUser}}
-		<div class="post-upvote">
-			<form id="form-up-{{.ID}}" onsubmit="return fetchpost('{{.ID}}', 'up')">
-				<!-- <input value="{{.ID}}" hidden> -->
-				<button type="submit" class="btn btn-primary up-button" onclick="vote('post{{.ID}}', 'up-button')">
-					<i class="bi bi-caret-up-fill"></i>
-				</button>
-			</form>
-		</div>
-		<div class="post-downvote">
-			<form id="form-down-{{.ID}}" onsubmit="return fetchpost('{{.ID}}', 'down')">
-				<!-- <input value="{{.ID}}" hidden> -->
-				<button type="submit" class="btn btn-primary down-button" onclick="vote('post{{.ID}}', 'down-button')">
-					<i class="bi bi-caret-down-fill"></i>
-				</button>
-			</form>
-		</div>
-		{{else}}
-		<div class="post-upvote">
-			<a href="/login">
-				<button type="submit" class="btn btn-primary">
-					<i class="bi bi-caret-up-fill"></i>
-				</button>
-			</a>
-		</div>
-		<div class="post-downvote">
-			<a href="/login">
-				<button type="submit" class="btn btn-primary">
-					<i class="bi bi-caret-down-fill"></i>
-				</button>
-			</a>
-		</div>
-		{{end}}
 
-		<div class="post-username">Posted by {{.User}}</div>
-		<p name="votes" class="votes" value="0">{{.Votes}}</p>
-		<div class="post-title"><a href="/post/{{.ID}}">{{.Title}}</a></div>
-		<!-- <div class="post-comments">8 comments</div> -->
-	</div>
-	{{with .ImageSrc}}
-	<img class="postimg" src="/static/{{.}}" alt="">
-	{{end}}
-	{{if eq $.Post.User $.User.Name}}
-	<a href="/edit/{{.ID}}">Edit</a>
-	<a href="/delete/{{.ID}}" data-method="delete" data-confirm="Are you sure?">Delete</a>
-	{{end}}
-</div>
+<div class="mainpagecontent">
+	<div class="mainpagebox">
+		<div class="mainpageboxinside">
+			<div class="insidecateboxheader">
+				<div class="mainbpageboxheaderthread">
+						{{with .Post}}
+						<div class="post-card" id="post{{.ID}}">
+							<div class="votingbuttons">
+								{{if $.AuthenticatedUser}}
+								<div class="post-upvote">
+									<form id="form-up-{{.ID}}" onsubmit="return fetchpost('{{.ID}}', 'up')">
+										<input value="{{.ID}}" hidden>
+										<button type="submit" class="btn up-button" onclick="vote('post{{.ID}}', 'up-button')">
+											<i class="bi upb bi-caret-up"></i>
+										</button>
+									</form>
+								</div>
 
-<!-- Commenting Section -->
-<div>
-	<form method="POST">
-		<label for="comment">Comment</label>
-		<textarea name="comment" id="" cols="30" rows="10" required></textarea>
-		{{if $.AuthenticatedUser}}
-		<button type="submit" class="btn btn-primary" name="submitPost">Submit comment</button>
-	</form>
-	{{else}}
-	</form>
-	<form action="/login">
-		<button type="submit" class="btn btn-primary" name="submitPost">Submit comment</button>
-	</form>
+								<div class="votecounter">
+									<a name="votes" class="votes" value="0">{{.Votes}}</a>
+								</div>
 
-	{{end}}
+								<div class="post-downvote">
+									<form id="form-down-{{.ID}}" onsubmit="return fetchpost('{{.ID}}', 'down')">
+										<input value="{{.ID}}" hidden>
+										<button type="submit" class="btn down-button" onclick="vote('post{{.ID}}', 'down-button')">
+											<i class="bi downb bi-caret-down"></i>
+										</button>
+									</form>
+								</div>
+								{{else}}
+								<div class="post-upvote">
+									<a href="/login">
+										<button type="submit" class="btn up-button">
+											<i class="bi upb bi-caret-up"></i>
+										</button>
+									</a>
+								</div>
 
-</div>
-{{end}}
+								<div class="votecounter">
+									<p name="votes" class="votes" value="0">{{.Votes}}</p>
+								</div>
 
-<!-- Previous Comments Section -->
-<div class="row row-cols-md-1 g-2 justify-content-center">
-	{{range .Comments}}
-	<div class="col">
-		<div class="card border-primary comment-card h-100" id="comment{{.ID}}">
-			<div class="row no-gutters">
-				<div class="col-md-2">
-					{{if $.AuthenticatedUser}}
-					<form id="comment-up-{{.ID}}" onsubmit="return fetchcomment('{{.ID}}', 'up')">
-						<!-- <input value="{{.ID}}" hidden> -->
-						<button type="submit" class="btn btn-primary up-button"
-							onclick="vote('comment{{.ID}}', 'up-button')">
-							<i class="bi bi-caret-up-fill"></i>
-						</button>
-					</form>
+								<div class="post-downvote">
+									<a href="/login">
+										<button type="submit" class="btn down-button">
+										<i class="bi downb bi-caret-down"></i>
+										</button>
+									</a>
+								</div>
+								{{end}}
+							</div>
 
-					<p name="votes" class="votes" value="0">{{.Votes}}</p>
+							<div class="postdetails">
+								<div class="post-username-thread">Posted by {{.User}} {{timeAgo .Created}}</div>
+								<div class="post-title-thread"><a class="post-title-thread stretched-link" href="/post/{{.ID}}">{{.Title}}</a></div>
+								<div class="post-description-thread">Random description hardcoded for leo yeee boi.</div>
+								<!-- <div class="post-comments">8 comments</div> -->
+							</div>
 
-					<form id="comment-down-{{.ID}}" onsubmit="return fetchcomment('{{.ID}}', 'down')">
-						<!-- <input value="{{.ID}}" hidden> -->
-						<button type="submit" class="btn btn-primary down-button"
-							onclick="vote('comment{{.ID}}', 'down-button')">
-							<i class="bi bi-caret-down-fill"></i>
-						</button>
-					</form>
-					{{else}}
-						<!-- <input value="{{.ID}}" hidden> -->
-						<a href="/login">
-							<button type="submit" class="btn btn-primary up-button">
-								<i class="bi bi-caret-up-fill"></i>
-							</button>
-						</a>
+							{{if eq $.Post.User $.User.Name}}
+							<div>
+								<a class="btn submitbtn" href="edit/{{.ID}}">Edit</a>
+								<a class="btn cancelbtn" href="/delete/{{.ID}}" data-method="delete" data-confirm="Are you sure?">Delete</a>
 
-					<p name="votes" class="votes" value="0">{{.Votes}}</p>
+							</div>
+							{{end}}
+						</div>
 
-						<!-- <input value="{{.ID}}" hidden> -->
-						<a href="/login">
-							<button type="submit" class="btn btn-primary down-button">
-								<i class="bi bi-caret-down-fill"></i>
-							</button>
-						</a>
+						<div class="postimgdiv">
+							{{with .ImageSrc}}
+							<img class="postimg" src="/static/{{.}}" alt="">
+							{{end}}
+						</div>
+				</div>
+				<div class="categories">
+					<div class="commentingbox">
+						<form  class="comment" method="POST">
+							<textarea class="commentbox "name="comment" id="" placeholder="Write your comment here"></textarea>
+							{{if $.AuthenticatedUser}}
+							<div class="com">
+								<button type="submit" class="btn submitbtn" name="submitPost">Submit comment</button>
+							</div>
+						</form>
+						{{else}}
+						</form>
+							<form action="/login">
+								<div class="com">
+									<button type="submit" class="btn submitbtn" name="submitPost">Submit comment</button>
+								</div>
+							</form>
+						{{end}}
+					</div>
+					{{end}}
+
+					<div class="insidecategories">
+					{{range .Comments}}
+					<div class="insidecatepadding">
+						<div class="catecard">
+							<div class="card-body">
+										<div class="post-card" id="comment{{.ID}}">
+											<div class="votingbuttons">
+												{{if $.AuthenticatedUser}}
+												<div class="post-upvote">
+													<form id="comment-up-{{.ID}}" onsubmit="return fetchpost('{{.ID}}', 'up')">
+														<input value="{{.ID}}" hidden>
+														<button type="submit" class="btn up-button" onclick="vote('comment{{.ID}}', 'up-button')">
+															<i class="bi upb bi-caret-up"></i>
+														</button>
+													</form>
+												</div>
+				
+												<div class="votecounter">
+													<a name="votes" class="votes" value="0">{{.Votes}}</a>
+												</div>
+				
+												<div class="post-downvote">
+													<form id="comment-down-{{.ID}}" onsubmit="return fetchpost('{{.ID}}', 'down')">
+														<input value="{{.ID}}" hidden>
+														<button type="submit" class="btn down-button" onclick="vote('comment{{.ID}}', 'down-button')">
+															<i class="bi downb bi-caret-down"></i>
+														</button>
+													</form>
+												</div>
+												{{else}}
+												<div class="post-upvote">
+													<a href="/login">
+														<button type="submit" class="btn up-button">
+															<i class="bi upb bi-caret-up"></i>
+														</button>
+													</a>
+												</div>
+				
+												<div class="votecounter">
+													<p name="votes" class="votes" value="0">{{.Votes}}</p>
+												</div>
+				
+												<div class="post-downvote">
+													<a href="/login">
+														<button type="submit" class="btn down-button">
+														<i class="bi downb bi-caret-down"></i>
+														</button>
+													</a>
+												</div>
+												{{end}}
+											</div>
+											
+											<div class="postdetails">
+												<div class="post-username">Posted by {{.User}} {{timeAgo .Created}}</div>
+												<p class="post-description-comment card-text">{{.Content}}</p>
+											</div>
+											{{if eq .User $.User.Name}}
+											<div>
+												<div>
+													<a class="btn submitbtn" href="" data-toggle="modal" data-target="#exampleModal">Edit</a>
+													<a class="btn cancelbtn" href="/deletecomment/{{.ID}}">Delete</a>
+												</div>
+											</div>
+											{{end}}
+										</div>
+									<!-- Modal -->
+									<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+										aria-hidden="true">
+										<div class="modal-dialog" role="document">
+											<div class="modal-content">
+												<div class="modal-header">
+													<h5 class="modal-title" id="exampleModalLabel">Edit comment</h5>
+													<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+														<span aria-hidden="true">&times;</span>
+													</button>
+												</div>
+												<div class="modal-body">
+													<form method="POST">
+														<label for="comment">Comment</label>
+														<textarea name="commentUpdate" id="" cols="30" rows="10">{{.Content}}</textarea>
+														<textarea name="commentUpdateID" id="" cols="0" rows="0" hidden>{{.ID}}</textarea>
+														<textarea name="commentUpdateUser" id="" cols="0" rows="0" hidden>{{.User}}</textarea>
+														<div class="modal-footer">
+															<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+															<button type="submit" class="btn btn-primary" name="submitPost">Save changes</button>
+														</div>
+													</form>
+												</div>
+								
+											</div>
+										</div>
+									</div>
+							</div>	
+						</div>
+					</div>
 					{{end}}
 				</div>
-				<div class="col-md-10">
-					<div class="card-body">
-						<p class="card-text">{{.Content}}</p>
-					</div>
-				</div>
-			</div>
-			{{if eq .User $.User.Name}}
-			<div class="card-footer">
-				<a href="" data-toggle="modal" data-target="#exampleModal">Edit</a>
-				<a href="/deletecomment/{{.ID}}">Delete</a>
-			</div>
-			{{end}}
-		</div>
-	</div>
-
-
-	<!-- Modal -->
-	<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-		aria-hidden="true">
-		<div class="modal-dialog" role="document">
-			<div class="modal-content">
-				<div class="modal-header">
-					<h5 class="modal-title" id="exampleModalLabel">Edit comment</h5>
-					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-						<span aria-hidden="true">&times;</span>
-					</button>
-				</div>
-				<div class="modal-body">
-					<form method="POST">
-						<label for="comment">Comment</label>
-						<textarea name="commentUpdate" id="" cols="30" rows="10">{{.Content}}</textarea>
-						<textarea name="commentUpdateID" id="" cols="0" rows="0" hidden>{{.ID}}</textarea>
-						<textarea name="commentUpdateUser" id="" cols="0" rows="0" hidden>{{.User}}</textarea>
-						<div class="modal-footer">
-							<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-							<button type="submit" class="btn btn-primary" name="submitPost">Save changes</button>
-						</div>
-					</form>
-				</div>
-
 			</div>
 		</div>
 	</div>
-	{{end}}
-
 </div>
 {{end}}
+
 
 {{define "js"}}
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
