--- a/ui/html/profile.page.tmpl
+++ b/ui/html/profile.page.tmpl
@@ -24,8 +24,83 @@
 					<a>Regular User</a>
 				</div>
 			</div>
-			<div class="submitpostbuttons">
+<!-- 			<div class="submitpostbuttons">
 				<a href="/" class="btn submitbtn" >Back</a>
+			</div> -->
+
+			<div class="activity">
+				<div class="accounth2">
+					<h2>Your activity</h2>
+				</div>
+
+				<div class="">
+					<a href="/profile/likes"><button type="button" class="btn submitbtn">Likes</button></a>
+					<a href="/profile/posts"><button type="button" class="btn submitbtn">Posts</button></a>
+					<a href="/profile/comments"><button type="button" class="btn submitbtn">Comments</button></a>
+				</div>
+
+				<div class="mainboxinside">
+					<div class="categories">
+						<div class="insidecategories">
+
+							{{range .Posts}}
+							<div class="insidecatepadding">
+								<div class="catecard">
+									<div class="card-body">
+										<div class="post-card" id="post{{.ID}}">
+											<div class="votingbuttons">
+												<div class="post-upvote">
+													<form id="form-up-{{.ID}}" onsubmit="return fetchpost('{{.ID}}', 'up')">
+														<input value="{{.ID}}" hidden>
+														<button type="submit" class="btn up-button" onclick="vote('post{{.ID}}', 'up-button')">
+															<i class="bi upb bi-caret-up"></i>
+														</button>
+													</form>
+												</div>
+
+												<div class="votecounter">
+													<p name="votes" class="votes" value="0">{{.Votes}}</p>
+												</div>
+
+												<div class="post-downvote">
+													<form id="form-down-{{.ID}}" onsubmit="return fetchpost('{{.ID}}', 'down')">
+														<input value="{{.ID}}" hidden>
+														<button type="submit" class="btn down-button" onclick="vote('post{{.ID}}', 'down-button')">
+															<i class="bi downb bi-caret-down"></i>
+														</button>
+													</form>
+												</div>
+											</div>
+											<div class="postdetails">
+												<div class="post-username">Posted by {{.User}} {{timeAgo .Created}}</div>
+												<div class="post-title"><a class="post-title stretched-link" href="/post/{{.ID}}">{{.Title}}</a></div>
+												<div class="post-description">{{.Content}}</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							{{end}}
+						
+							{{range .Comments}}
+							<div class="insidecatepadding">
+								<div class="catecard">
+									<div class="card-body">
+										<div class="postcard">
+											<div class="votingbuttons">
+											</div>
+											<div class="postdetails">
+												<div class="post-username">Posted by {{.User}} {{.Created}}</div>
+												<div class="post-description-thread">{{.Content}}</div>
+											</div>
+										</div>		
+									</div>
+								</div>
+							</div>
+							{{end}}
+						</div>	
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
