fixed character count in create category

--- a/ui/html/submitpost.page.tmpl
+++ b/ui/html/submitpost.page.tmpl
@@ -81,7 +81,7 @@
 {{define "js"}}
 <script type="text/javascript">
 	function charactercount() {
-		const areatextarea = document.querySelector("#postcontent");
+		// const areatextarea = document.querySelector("#postcontent");
 		const areatext = document.querySelector("#postcontent").value.length;
 		const textcount = document.querySelector("#textcount");
 		const wordcount = document.querySelector("#words_count");
