--- a/ui/html/createcat.page.tmpl
+++ b/ui/html/createcat.page.tmpl
@@ -19,7 +19,7 @@
                 <div>
 
                     <label class="form-label">Description</label>
-                    <textarea class="form-control" name="description" onkeyup="charactercount()" maxlength="500"
+                    <textarea class="form-control" name="description" id="cat-description" onkeyup="charactercount()" maxlength="500"
                         placeholder="Maximum 500 characters"></textarea>
                     <div class="d-flex justify-content-end">
                         <span id="words_count" class="badge badger">
@@ -41,4 +41,20 @@
         </div>
     </div>
 </div>
+{{end}}
+
+{{define "js"}}
+<script type="text/javascript">
+	function charactercount() {
+		// const areatextarea = document.querySelector("#postcontent");
+		const areatext = document.querySelector("#cat-description").value.length;
+		const textcount = document.querySelector("#textcount");
+		const wordcount = document.querySelector("#words_count");
+		textcount.innerHTML = areatext;
+	};
+
+	var checkboxes = document.querySelectorAll('input[type="checkbox"]');
+	var checkedOne = Array.prototype.slice.call(checkboxes).some(x => x.checked);
+	console.log(checkedOne)
+</script>
 {{end}}
