--- a/ui/assets/css/mystyle.css
+++ b/ui/assets/css/mystyle.css
@@ -462,6 +462,13 @@ border:1px solid #45ffdb;
 .postdetails {
     flex-grow: 8;
     position: relative;
+    min-width: 200px;
+    max-height: 500px;
+    height: 100%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    word-wrap: break-word;
 }
 
 .post-username {
@@ -556,7 +563,7 @@ border:1px solid #45ffdb;
 
 .post-description-thread {
     color: whitesmoke;
-    font-size: 18px;
+    font-size: 14px;
 }
 
 .commentingbox {
