Fixed email regex, submit error description field, fixed comparing both password fields

--- a/ui/html/submitpost.page.tmpl
+++ b/ui/html/submitpost.page.tmpl
@@ -39,7 +39,7 @@
 					</div>
 				</div>
 				<div id="textarea_count" class="badge pull-right"></div>
-				{{with .Errors.Get "title"}}
+				{{with .Errors.Get "description"}}
 				<label class='error'>{{.}}</label>
 				{{end}}
 				{{end}}
